--- a/html/index.html
+++ b/html/index.html
@@ -39,7 +39,7 @@
       <div class="info-img"></div>
       <div class="info-content">
          <h2><span class="primary-text">More</span> About Me</h2>
-         <p>I’ve always been a physically active person growing up, so I enjoy outdoor activities. Particularly, I enjoy football (soccer) and have been playing it for as long as I remember.CS:GO is the only game I play whenever I want to let out some steam. For music, I'm into a variety of genres such as pop, alternative/ indie rock, hip/hop, and jazz to name a few. So if we're ever in a car together, don't hand me the AUX cord because my playlist can get a little hectic! </p>
+         <p>I’ve always been physically active growing up, so I enjoy outdoor activities. Particularly, I enjoy football (soccer) and have been playing it for as long as I remember.CS:GO is the only game I play whenever I want to let out some steam. For music, I'm into a variety of genres such as pop, alternative/ indie rock, hip/hop, and jazz to name a few. So if we're ever in a car together, don't hand me the AUX cord because my playlist can get a little hectic! </p>
          <h2><span class="primary-text">Education</span></h2>
          <p>
           I finished high school in mid 2018 in Phnom Penh, Cambodia. In the same year in October, I attended Deakin University in Melbourne, Australia, undertaking the Diploma of Commerce for a year. After, I took a gap year and applied for the Bachelor of Information Technology at RMIT.  
